Fix dark mode for pilipili

--- a/src/css/games/pilipili.less
+++ b/src/css/games/pilipili.less
@@ -21,26 +21,6 @@ html[data-theme=dark] {
 		background-color: transparent !important;
 	}
 
-	div[style^="outline-color: rgb(141, 191, 32);"] {
-		outline-color: #99c638 !important;
-	}
-
-	div[style^="outline-color: rgb(2, 77, 160);"] {
-		outline-color: #457cb9 !important;
-	}
-
-	div[style^="outline-color: rgb(43, 168, 226);"] {
-		outline-color: #2ca8e2 !important;
-	}
-
-	div[style^="outline-color: rgb(187, 23, 21);"] {
-		outline-color: #c53b39 !important;
-	}
-
-	div[style^="outline-color: rgb(239, 128, 2);"] {
-		outline-color: #f3a247 !important;
-	}
-
 	#logs .mf_shadow {
 		filter: var(--drop-shadow);
 	}
